test/compile_errors/arity_error.ivy
#lang ivy1.7
type nat
relation test(A: nat, B: nat)

conjecture test(1)
